Modification of index.html content

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>DevOps</title>
 </head>
 <body>
-    <h1>This is a DevOps Tutrial</h1>
+    <h1>Welcome to my DevOps Tutrial</h1>
 </body>
 </html>
